[UPDATE] make row and column text label font size be responsive.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -637,26 +637,15 @@ table {
 }
 
 .meta .title {
-	display: block;
-	/*font-size: 2em;*/
-	line-height: 2em;
-	padding: 0 10px;
-	/*background-color: #474747;*/
-	/*color: #ffffff;*/
-	font-size: 1.5em;
-	color: #474747;
+	font-size: 2em;
+	fill: #474747;
 }
 </style>
 		<style>
 /* MEDIA QUERIES */
 
 /* 960 px */
-@media screen and (max-width: 960px) {
-	.meta .title {
-		font-size: 1.6em;
-		line-height: 2.25em;
-	}
-}
+@media screen and (max-width: 960px) {}
 </style>
 
 		<!-- PRESENTATION CONTENT -->
@@ -1163,6 +1152,7 @@ Chart.prototype.createRows = function() {
 		.attr( 'y', this._yScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'end' )
+		.attr( 'font-size', this.fontSize() )
 		.text( this._getRowName )
 		.on( 'click', this._onRowClick );
 
@@ -1197,6 +1187,7 @@ Chart.prototype.createCols = function() {
 		.attr( 'y', this._xScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'start' )
+		.attr( 'font-size', this.fontSize() )
 		.text( this._getColName )
 		.on( 'click', this._onColClick );
 
@@ -1245,7 +1236,7 @@ Chart.prototype.createTitle = function() {
 		.attr( 'property', 'chart.title' )
 		.attr( 'class', 'title noselect' )
 		.attr( 'x', 0 )
-		.attr( 'y', 0 )
+		.attr( 'y', 40 )
 		.text( this.chartTitle );
 
 	return this;
@@ -1309,6 +1300,7 @@ Chart.prototype.resetRows = function() {
 		.attr( 'y', this._yScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'end' )
+		.attr( 'font-size', this.fontSize() )
 		.text( this._getRowName )
 		.on( 'click', this._onRowClick );
 
@@ -1351,6 +1343,7 @@ Chart.prototype.resetCols = function() {
 		.attr( 'y', this._xScale.rangeBand() / 2 )
 		.attr( 'dy', '.32em' )
 		.attr( 'text-anchor', 'start' )
+		.attr( 'font-size', this.fontSize() )
 		.text( this._getColName )
 		.on( 'click', this._onColClick );
 
@@ -1618,6 +1611,25 @@ Chart.prototype.delay = function( d, i ) {
 }; // end METHOD delay()
 
 /**
+* METHOD: fontSize()
+*	Computes the row and column label text size based on cell dimensions.
+*
+* @returns {Number} font size in pixels
+*/
+Chart.prototype.fontSize = function() {
+	var dx, dy;
+	dx = this._xScale.rangeBand();
+	dy = this._yScale.rangeBand();
+	if ( dx > dy ) {
+		dx = dy;
+	}
+	if ( dx > 18 ) {
+		return 16;
+	}
+	return dx - 2;
+}; // end METHOD fontSize()
+
+/**
 * METHOD: dataChanged( oldVal newVal )
 *	Event handler invoked when the `data` attribute changes.
 *
@@ -1625,7 +1637,7 @@ Chart.prototype.delay = function( d, i ) {
 * @param {Array} newVal - new value
 */
 Chart.prototype.dataChanged = function( oldVal, newVal ) {
-	// TODO: validate new value is a data frame
+	// TODO: take an array of arrays; attempt to convert to data frame (separate function; wrap in try/catch); if unable, emit error; else proceed.
 
 	this._xScale.domain( this.data.colnames() );
 	this._yScale.domain( this.data.rownames() );
@@ -1727,6 +1739,15 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'x', this._cx )
 			.attr( 'width', this._xScale.rangeBand() );
+
+		// [6] Update the row and column labels:
+		this.$.rows.selectAll( 'text' )
+			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
+
+		this.$.cols.selectAll( 'text' )
+			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'width', {
 		'type': 'changed'
@@ -1776,6 +1797,15 @@ Chart.prototype.heightChanged = function( oldVal, newVal ) {
 		// [5] Update the cells:
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'height', this._yScale.rangeBand() );
+
+		// [6] Update the row and column labels:
+		this.$.rows.selectAll( 'text' )
+			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
+
+		this.$.cols.selectAll( 'text' )
+			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'height', {
 		'type': 'changed'
@@ -1851,6 +1881,15 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'x', this._cx )
 			.attr( 'width', this._xScale.rangeBand() );
+
+		// [6] Update the row and column labels:
+		this.$.rows.selectAll( 'text' )
+			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
+
+		this.$.cols.selectAll( 'text' )
+			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'changed', {
 		'attr': 'paddingLeft',
@@ -1895,6 +1934,15 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'x', this._cx )
 			.attr( 'width', this._xScale.rangeBand() );
+
+		// [5] Update the row and column labels:
+		this.$.rows.selectAll( 'text' )
+			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
+
+		this.$.cols.selectAll( 'text' )
+			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'changed', {
 		'attr': 'paddingRight',
@@ -1938,6 +1986,15 @@ Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 		// [4] Update the cells:
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'height', this._yScale.rangeBand() );
+
+		// [5] Update the row and column labels:
+		this.$.rows.selectAll( 'text' )
+			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
+
+		this.$.cols.selectAll( 'text' )
+			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'changed', {
 		'attr': 'paddingBottom',
@@ -1984,6 +2041,15 @@ Chart.prototype.paddingTopChanged = function( oldVal, newVal ) {
 		// [5] Update the cells:
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'height', this._yScale.rangeBand() );
+
+		// [6] Update the row and column labels:
+		this.$.rows.selectAll( 'text' )
+			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
+
+		this.$.cols.selectAll( 'text' )
+			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'changed', {
 		'attr': 'paddingTop',
