--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -1709,6 +1709,7 @@ Chart.prototype.configChanged = function( oldConfig, newConfig ) {
 */
 Chart.prototype.widthChanged = function( oldVal, newVal ) {
 	var width,
+		dx,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal <= 0 ) {
 		err = new TypeError( 'width::invalid assignment. Must be a number greater than 0. Value: `' + newVal + '`.' );
@@ -1720,6 +1721,7 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 
 	// [0] Update the x-scale:
 	this._xScale.rangeBands( [ 0, width ] );
+	dx = this._xScale.rangeBand();
 
 	if ( this.$.canvas && this.autoUpdate ) {
 		// [1] Update the SVG canvas:
@@ -1738,7 +1740,7 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 		// [5] Update the cells:
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'x', this._cx )
-			.attr( 'width', this._xScale.rangeBand() );
+			.attr( 'width', dx );
 
 		// [6] Update the row and column labels:
 		this.$.rows.selectAll( 'text' )
@@ -1746,7 +1748,7 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 			.attr( 'font-size', this.fontSize() );
 
 		this.$.cols.selectAll( 'text' )
-			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'y', dx / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'width', {
@@ -1768,6 +1770,7 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.heightChanged = function( oldVal, newVal ) {
 	var height,
+		dy,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal <= 0 ) {
 		err = new TypeError( 'height::invalid assignment. Must be a number greater than 0. Value: `' + newVal + '`.' );
@@ -1779,6 +1782,7 @@ Chart.prototype.heightChanged = function( oldVal, newVal ) {
 
 	// [0] Update the y-scale:
 	this._yScale.rangeBands( [ 0, height ] );
+	dy = this._yScale.rangeBand();
 
 	if ( this.$.canvas && this.autoUpdate ) {
 		// [1] Update the SVG canvas:
@@ -1796,11 +1800,11 @@ Chart.prototype.heightChanged = function( oldVal, newVal ) {
 
 		// [5] Update the cells:
 		this.$.rows.selectAll( '.cell' )
-			.attr( 'height', this._yScale.rangeBand() );
+			.attr( 'height', dy );
 
 		// [6] Update the row and column labels:
 		this.$.rows.selectAll( 'text' )
-			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'y', dy / 2 )
 			.attr( 'font-size', this.fontSize() );
 
 		this.$.cols.selectAll( 'text' )
@@ -1851,6 +1855,7 @@ Chart.prototype.chartTitleChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 	var width,
+		dx,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal%1 !== 0 || newVal < 0 ) {
 		err = new TypeError( 'paddingLeft::invalid assignment. Must be an integer greater than or equal to 0. Value: `' + newVal + '`.' );
@@ -1862,6 +1867,7 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 
 	// [0] Update the x-scale:
 	this._xScale.rangeBands( [ 0, width ] );
+	dx = this._xScale.rangeBand();
 
 	if ( this.autoUpdate ) {
 		// [1] Update the background:
@@ -1880,7 +1886,7 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 		// [5] Update the cells:
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'x', this._cx )
-			.attr( 'width', this._xScale.rangeBand() );
+			.attr( 'width', dx );
 
 		// [6] Update the row and column labels:
 		this.$.rows.selectAll( 'text' )
@@ -1888,7 +1894,7 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 			.attr( 'font-size', this.fontSize() );
 
 		this.$.cols.selectAll( 'text' )
-			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'y', dx / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'changed', {
@@ -1907,6 +1913,7 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 	var width,
+		dx,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal%1 !== 0 || newVal < 0 ) {
 		err = new TypeError( 'paddingRight::invalid assignment. Must be an integer greater than or equal to 0. Value: `' + newVal + '`.' );
@@ -1918,6 +1925,7 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 
 	// [0] Update the x-scale:
 	this._xScale.rangeBands( [ 0, width ] );
+	dx = this._xScale.rangeBand();
 
 	if ( this.autoUpdate ) {
 		// [1] Update the background:
@@ -1933,7 +1941,7 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 		// [4] Update the cells:
 		this.$.rows.selectAll( '.cell' )
 			.attr( 'x', this._cx )
-			.attr( 'width', this._xScale.rangeBand() );
+			.attr( 'width', dx );
 
 		// [5] Update the row and column labels:
 		this.$.rows.selectAll( 'text' )
@@ -1941,7 +1949,7 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 			.attr( 'font-size', this.fontSize() );
 
 		this.$.cols.selectAll( 'text' )
-			.attr( 'y', this._xScale.rangeBand() / 2 )
+			.attr( 'y', dx / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
 	this.fire( 'changed', {
@@ -1960,6 +1968,7 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 	var height,
+		dy,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal%1 !== 0 || newVal < 0 ) {
 		err = new TypeError( 'paddingBottom::invalid assignment. Must be an integer greater than or equal to 0. Value: `' + newVal + '`.' );
@@ -1971,6 +1980,7 @@ Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 
 	// [0] Update the y-scale:
 	this._yScale.rangeBands( [ 0, height ] );
+	dy = this._yScale.rangeBand();
 
 	if ( this.autoUpdate ) {
 		// [1] Update the background:
@@ -1985,11 +1995,11 @@ Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 
 		// [4] Update the cells:
 		this.$.rows.selectAll( '.cell' )
-			.attr( 'height', this._yScale.rangeBand() );
+			.attr( 'height', dy );
 
 		// [5] Update the row and column labels:
 		this.$.rows.selectAll( 'text' )
-			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'y', dy / 2 )
 			.attr( 'font-size', this.fontSize() );
 
 		this.$.cols.selectAll( 'text' )
@@ -2012,6 +2022,7 @@ Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.paddingTopChanged = function( oldVal, newVal ) {
 	var height,
+		dy,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal%1 !== 0 || newVal < 0 ) {
 		err = new TypeError( 'paddingTop::invalid assignment. Must be an integer greater than or equal to 0.  Value: `' + newVal + '.' );
@@ -2023,6 +2034,7 @@ Chart.prototype.paddingTopChanged = function( oldVal, newVal ) {
 
 	// [0] Update the y-scale:
 	this._yScale.rangeBands( [ 0, height ] );
+	dy = this._yScale.rangeBand();
 
 	if ( this.autoUpdate ) {
 		// [1] Update the background:
@@ -2040,11 +2052,11 @@ Chart.prototype.paddingTopChanged = function( oldVal, newVal ) {
 
 		// [5] Update the cells:
 		this.$.rows.selectAll( '.cell' )
-			.attr( 'height', this._yScale.rangeBand() );
+			.attr( 'height', dy );
 
 		// [6] Update the row and column labels:
 		this.$.rows.selectAll( 'text' )
-			.attr( 'y', this._yScale.rangeBand() / 2 )
+			.attr( 'y', dy / 2 )
 			.attr( 'font-size', this.fontSize() );
 
 		this.$.cols.selectAll( 'text' )
