[UPDATE] cache references to cells and row-column names.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -975,6 +975,15 @@ Chart.prototype.init = function() {
 	$.marks = null;
 	$.rows = null;
 	$.cols = null;
+	$.cells = null;
+
+	// Grid lines...
+	$.rowGridlines = null;
+	$.colGridlines = null;
+
+	// Names...
+	$.rownames = null;
+	$.colnames = null;
 
 	return this;
 }; // end METHOD init()
@@ -1133,7 +1142,7 @@ Chart.prototype.createMarks = function() {
 * @returns {DOMElement} element instance
 */
 Chart.prototype.createRows = function() {
-	this.$.rows = this.$.marks.selectAll( '.row' )
+	var rows = this.$.marks.selectAll( '.row' )
 		.data( (this.data) ? this.data.rownames() : [] )
 		.enter()
 		.append( 'svg:g' )
@@ -1142,11 +1151,11 @@ Chart.prototype.createRows = function() {
 			.on( 'mouseover', this._onRowHover )
 			.on( 'mouseout', this._onRowHoverEnd );
 
-	this.$.rows.append( 'svg:line' )
+	rows.append( 'svg:line' )
 		.attr( 'class', 'grid x' )
 		.attr( 'x1', this.graphWidth() );
 
-	this.$.rows.append( 'svg:text' )
+	rows.append( 'svg:text' )
 		.attr( 'class', 'noselect name' )
 		.attr( 'x', -6 )
 		.attr( 'y', this._yScale.rangeBand() / 2 )
@@ -1156,7 +1165,15 @@ Chart.prototype.createRows = function() {
 		.text( this._getRowName )
 		.on( 'click', this._onRowClick );
 
-	this.$.rows.each( this._createCells );
+	// Cache references to created elements:
+	this.$.rows = rows;
+	this.$.rowGridlines = rows.selectAll( '.grid.x' );
+	this.$.rownames = rows.selectAll( '.name' );
+
+	// Create the row cells:
+	rows.each( this._createCells );
+
+	this.$.cells = rows.selectAll( '.cell' );
 
 	return this;
 }; // end METHOD createRows()
@@ -1168,7 +1185,7 @@ Chart.prototype.createRows = function() {
 * @returns {DOMElement} element instance
 */
 Chart.prototype.createCols = function() {
-	this.$.cols = this.$.marks.selectAll( '.col' )
+	var cols = this.$.marks.selectAll( '.col' )
 		.data( (this.data) ? this.data.colnames() :  [] )
 		.enter()
 		.append( 'svg:g' )
@@ -1177,11 +1194,11 @@ Chart.prototype.createCols = function() {
 			.on( 'mouseover', this._onColHover )
 			.on( 'mouseout', this._onColHoverEnd );
 
-	this.$.cols.append( 'svg:line' )
-		.attr( 'class', 'grid' )
+	cols.append( 'svg:line' )
+		.attr( 'class', 'grid y' )
 		.attr( 'x1', -this.graphHeight() );
 
-	this.$.cols.append( 'svg:text' )
+	cols.append( 'svg:text' )
 		.attr( 'class', 'noselect name' )
 		.attr( 'x', 6 )
 		.attr( 'y', this._xScale.rangeBand() / 2 )
@@ -1190,6 +1207,11 @@ Chart.prototype.createCols = function() {
 		.attr( 'font-size', this.fontSize() )
 		.text( this._getColName )
 		.on( 'click', this._onColClick );
+
+	// Cache references to created elements:
+	this.$.cols = cols;
+	this.$.colGridlines = cols.selectAll( '.grid.y' );
+	this.$.colnames = cols.selectAll( '.name' );
 
 	return this;
 }; // end METHOD createCols()
@@ -1304,9 +1326,15 @@ Chart.prototype.resetRows = function() {
 		.text( this._getRowName )
 		.on( 'click', this._onRowClick );
 
+	// Update the cache references to row elements:
 	this.$.rows = rows;
+	this.$.rowGridlines = rows.selectAll( '.grid.x' );
+	this.$.rownames = rows.selectAll( '.name' );
 
+	// Create the row cells:
 	rows.each( this._resetCells );
+
+	this.$.cells = rows.selectAll( '.cell' );
 
 	return this;
 }; // end METHOD resetRows()
@@ -1349,6 +1377,8 @@ Chart.prototype.resetCols = function() {
 
 	// Cache a reference to the columns:
 	this.$.cols = cols;
+	this.$.colGridlines = cols.selectAll( '.grid.y' );
+	this.$.colnames = cols.selectAll( '.name' );
 
 	return this;
 }; // end METHOD resetCols()
@@ -1457,8 +1487,7 @@ Chart.prototype.colOrder = function( arr ) {
 	} else {
 		this.$.cols.attr( 'transform', this._x );
 
-		this.$.rows.selectAll( '.cell' )
-			.attr( 'x', this._cx );
+		this.$.cells.attr( 'x', this._cx );
 
 		this.fire( 'transitionEnd', null );
 	}
@@ -1624,7 +1653,7 @@ Chart.prototype.fontSize = function() {
 		dx = dy;
 	}
 	if ( dx > 18 ) {
-		return 16;
+		return 16; // font-size upper bound
 	}
 	return dx - 2;
 }; // end METHOD fontSize()
@@ -1731,23 +1760,23 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 		this.$.bkgd.attr( 'width', width );
 
 		// [3] Update the rows:
-		this.$.rows.selectAll( '.grid' )
+		this.$.rowGridlines
 			.attr( 'x1', width );
 
 		// [4] Update the columns:
 		this.$.cols.attr( 'transform', this._x );
 
 		// [5] Update the cells:
-		this.$.rows.selectAll( '.cell' )
+		this.$.cells
 			.attr( 'x', this._cx )
 			.attr( 'width', dx );
 
-		// [6] Update the row and column labels:
-		this.$.rows.selectAll( 'text' )
+		// [6] Update the row and column names:
+		this.$.rownames
 			.attr( 'y', this._yScale.rangeBand() / 2 )
 			.attr( 'font-size', this.fontSize() );
 
-		this.$.cols.selectAll( 'text' )
+		this.$.colnames
 			.attr( 'y', dx / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
@@ -1795,19 +1824,17 @@ Chart.prototype.heightChanged = function( oldVal, newVal ) {
 		this.$.rows.attr( 'transform', this._y );
 
 		// [4] Update the columns:
-		this.$.cols.selectAll( '.grid' )
-			.attr( 'x1', -height );
+		this.$.colGridlines.attr( 'x1', -height );
 
 		// [5] Update the cells:
-		this.$.rows.selectAll( '.cell' )
-			.attr( 'height', dy );
+		this.$.cells.attr( 'height', dy );
 
-		// [6] Update the row and column labels:
-		this.$.rows.selectAll( 'text' )
+		// [6] Update the row and column names:
+		this.$.rownames
 			.attr( 'y', dy / 2 )
 			.attr( 'font-size', this.fontSize() );
 
-		this.$.cols.selectAll( 'text' )
+		this.$.colnames
 			.attr( 'y', this._xScale.rangeBand() / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
@@ -1877,23 +1904,22 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 		this.$.graph.attr( 'transform', 'translate(' + newVal + ',' + this.paddingTop + ')' );
 
 		// [3] Update the rows:
-		this.$.rows.selectAll( '.grid' )
-			.attr( 'x1', width );
+		this.$.rowGridlines.attr( 'x1', width );
 
 		// [4] Update the columns:
 		this.$.cols.attr( 'transform', this._x );
 
 		// [5] Update the cells:
-		this.$.rows.selectAll( '.cell' )
+		this.$.cells
 			.attr( 'x', this._cx )
 			.attr( 'width', dx );
 
-		// [6] Update the row and column labels:
-		this.$.rows.selectAll( 'text' )
+		// [6] Update the row and column names:
+		this.$.rownames
 			.attr( 'y', this._yScale.rangeBand() / 2 )
 			.attr( 'font-size', this.fontSize() );
 
-		this.$.cols.selectAll( 'text' )
+		this.$.colnames
 			.attr( 'y', dx / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
@@ -1932,23 +1958,23 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 		this.$.bkgd.attr( 'width', width );
 
 		// [2] Update the rows:
-		this.$.rows.selectAll( '.grid' )
+		this.$.rowGridlines
 			.attr( 'x1', width );
 
 		// [3] Update the columns:
 		this.$.cols.attr( 'transform', this._x );
 
 		// [4] Update the cells:
-		this.$.rows.selectAll( '.cell' )
+		this.$.cells
 			.attr( 'x', this._cx )
 			.attr( 'width', dx );
 
-		// [5] Update the row and column labels:
-		this.$.rows.selectAll( 'text' )
+		// [5] Update the row and column names:
+		this.$.rownames
 			.attr( 'y', this._yScale.rangeBand() / 2 )
 			.attr( 'font-size', this.fontSize() );
 
-		this.$.cols.selectAll( 'text' )
+		this.$.colnames
 			.attr( 'y', dx / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
@@ -1990,19 +2016,18 @@ Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 		this.$.rows.attr( 'transform', this._y );
 
 		// [3] Update the columns:
-		this.$.cols.selectAll( '.grid' )
+		this.$.colGridlines
 			.attr( 'x1', -height );
 
 		// [4] Update the cells:
-		this.$.rows.selectAll( '.cell' )
-			.attr( 'height', dy );
+		this.$.cells.attr( 'height', dy );
 
-		// [5] Update the row and column labels:
-		this.$.rows.selectAll( 'text' )
+		// [5] Update the row and column names:
+		this.$.rownames
 			.attr( 'y', dy / 2 )
 			.attr( 'font-size', this.fontSize() );
 
-		this.$.cols.selectAll( 'text' )
+		this.$.colnames
 			.attr( 'y', this._xScale.rangeBand() / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
@@ -2047,19 +2072,17 @@ Chart.prototype.paddingTopChanged = function( oldVal, newVal ) {
 		this.$.rows.attr( 'transform', this._y );
 
 		// [4] Update the columns:
-		this.$.cols.selectAll( '.grid' )
-			.attr( 'x1', -height );
+		this.$.colGridlines.attr( 'x1', -height );
 
 		// [5] Update the cells:
-		this.$.rows.selectAll( '.cell' )
-			.attr( 'height', dy );
+		this.$.cells.attr( 'height', dy );
 
 		// [6] Update the row and column labels:
-		this.$.rows.selectAll( 'text' )
+		this.$.rownames
 			.attr( 'y', dy / 2 )
 			.attr( 'font-size', this.fontSize() );
 
-		this.$.cols.selectAll( 'text' )
+		this.$.colnames
 			.attr( 'y', this._xScale.rangeBand() / 2 )
 			.attr( 'font-size', this.fontSize() );
 	}
@@ -2088,10 +2111,9 @@ Chart.prototype.zValueChanged = function( oldVal, newVal ) {
 	}
 	if ( type === 'function' ) {
 		this._zScale.domain( this.zDomain( this.zMin, this.zMax ) );
-
-		this.$.marks.selectAll( '.cell' )
-			.attr( 'fill-opacity', ( typeof this.zValue === 'function' ) ? this._z : this.zValue );
 	}
+	this.$.cells.attr( 'fill-opacity', ( typeof this.zValue === 'function' ) ? this._z : this.zValue );
+
 	this.fire( 'changed', {
 		'attr': 'zValue',
 		'prev': oldVal,
@@ -2122,8 +2144,7 @@ Chart.prototype.zMinChanged = function( oldVal, newVal ) {
 	zScale.domain( domain );
 
 	if ( this.autoUpdate ) {
-		this.$.marks.selectAll( '.cell' )
-			.attr( 'fill-opacity', ( typeof this.zValue === 'function' ) ? this._z : this.zValue );
+		this.$.cells.attr( 'fill-opacity', ( typeof this.zValue === 'function' ) ? this._z : this.zValue );
 	}
 	this.fire( 'zMin', {
 		'type': 'changed'
@@ -2158,8 +2179,7 @@ Chart.prototype.zMaxChanged = function( oldVal, newVal ) {
 	zScale.domain( domain );
 
 	if ( this.autoUpdate ) {
-		this.$.marks.selectAll( '.cell' )
-			.attr( 'fill-opacity', ( typeof this.zValue === 'function' ) ? this._z : this.zValue );
+		this.$.cells.attr( 'fill-opacity', ( typeof this.zValue === 'function' ) ? this._z : this.zValue );
 	}
 	this.fire( 'zMax', {
 		'type': 'changed'
@@ -2187,8 +2207,7 @@ Chart.prototype.cScaleChanged = function( oldVal, newVal ) {
 		return;
 	}
 	if ( this.autoUpdate ) {
-		this.$.rows.selectAll( '.cell' )
-			.attr( 'fill', newVal );
+		this.$.cells.attr( 'fill', newVal );
 	}
 	this.fire( 'changed', {
 		'attr': 'cScale',
