[UPDATE] grid line styles.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -624,8 +624,11 @@ table {
 }
 
 .grid {
+	fill: none;
 	stroke: #fff;
 	stroke-width: 1;
+	shape-rendering: crispEdges;
+	vector-effect: non-scaling-stroke;
 }
 
 .name {
