[UPDATE] ensure order is permutation.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -1749,6 +1749,40 @@ Chart.prototype.calculatePadding = function() {
 }; // end METHOD calculatePadding()
 
 /**
+* METHOD: validateOrder( arr )
+*	Validates that an array of indices is a permutation.
+*
+* @param {Array} arr - array of indices
+* @returns {Boolean} boolean indicating if valid
+*/
+Chart.prototype.validateOrder = function( arr ) {
+	var len = arr.length,
+		hash = {},
+		range,
+		key,
+		i;
+
+	// Build a hash of all indices, ensuring uniqueness...
+	for ( i = 0; i < len; i++ ) {
+		key = arr[ i ];
+		if ( hash[ key ] ) {
+			return false;
+		}
+		hash[ key ] = true;
+	}
+	// Create a unique ordered array of all possible indices:
+	range = this._d3.range( len );
+
+	// Confirm that the hash has every possible index...
+	for ( i = 0; i < len; i++ ) {
+		if ( !hash[ range[i] ] ) {
+			return false;
+		}
+	}
+	return true;
+}; // end METHOD validateOrder()
+
+/**
 * METHOD: dataChanged( oldVal newVal )
 *	Event handler invoked when the `data` attribute changes.
 *
@@ -1817,6 +1851,12 @@ Chart.prototype.rowOrderChanged = function( val, newVal ) {
 		this.rowOrder = this._rowOrder.slice();
 		return;
 	}
+	if ( !this.validateOrder( rowOrder ) ) {
+		err = new Error( 'rowOrder::invalid assignment. Assigned array must be a permutation of row indices.' );
+		this.fire( 'err', err );
+		this.rowOrder = this._rowOrder.slice();
+		return;
+	}
 	this._rowOrder = rowOrder.slice();
 	this._yScale.domain( rowOrder );
 
@@ -1871,6 +1911,12 @@ Chart.prototype.colOrderChanged = function( val, newVal ) {
 	}
 	if ( colOrder.length !== len ) {
 		err = new Error( 'colOrder::invalid assignment. Array length must equal the number of columns. Number of columns: ' + len + '.' );
+		this.fire( 'err', err );
+		this.colOrder = this._colOrder.slice();
+		return;
+	}
+	if ( !this.validateOrder( colOrder ) ) {
+		err = new Error( 'colOrder::invalid assignment. Assigned array must be a permutation of column indices.' );
 		this.fire( 'err', err );
 		this.colOrder = this._colOrder.slice();
 		return;
