--- a/test/index.html
+++ b/test/index.html
@@ -35,7 +35,8 @@
 				'paddingTop/test.html',
 				'paddingBottom/test.html',
 
-				'chartTitle/test.html',
+				'xLabel/test.html',
+				'yLabel/test.html',
 
 				'autoResize/test.html',
 				'autoUpdate/test.html',
